--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <!--font awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-    <!--Custom-->
-    <link rel="stylesheet" href="./css/main.css">
+    
 
 </head>
 <body>
@@ -69,9 +68,6 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="./img/slider4.jpg" style="width: 90%" alt="First slide">
-              </div>
-              <div class="carousel-item">
                 <img class="d-block w-100" src="./img/slider5.jpg" style="width: 90%" alt="Second slide">
               </div>
               <div class="carousel-item">
@@ -249,6 +245,13 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-4">
+            <p>
+                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:88px;height:31px"
+                        src="http://jigsaw.w3.org/css-validator/images/vcss"
+                        alt="¡CSS Válido!" />
+                </a>
+            </p>
           <p><a href="#">Copyright &copy; 2019</a></p>
         </div>
       </div>
